--- a/index.html
+++ b/index.html
@@ -270,8 +270,10 @@
 
     <script>
       const nav = document.getElementById("main");
+      const navTop = nav.offsetTop;
       const fixNav = () => {
-        if (window.scrollY >= nav.offsetTop) {
+        console.log(window.scrollY, navTop);
+        if (window.scrollY >= navTop) {
           document.body.style.paddingTop = nav.offsetHeight + "px";
           document.body.classList.add("fixed-nav");
         } else {
@@ -279,7 +281,7 @@
           document.body.classList.remove("fixed-nav");
         }
       };
-      window.addEventListener("scroll", fixNav);
+      document.addEventListener("scroll", fixNav);
     </script>
   </body>
 </html>
